--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="avatar"><img src='D:\My_web\figures\tou.jpg' alt="Avatar"></div>
+        <div class="avatar"><img src='/yuchen/figures/tou.jpg' alt="Avatar"></div>
         <div class="brand-text">
           <h1>张裕晨</h1>
           <p>中国矿业大学 | 深度学习与计算机视觉</p>
@@ -626,7 +626,7 @@
 
       <aside>
         <div class="card fade-in profile">
-          <div class="profile-avatar"><img src='D:\My_web\figures\tou.jpg' alt="Avatar"></div>
+          <div class="profile-avatar"><img src='/yuchen/figures/tou.jpg' alt="Avatar"></div>
           <h3>张裕晨</h3>
           <p>中国矿业大学</p>
 
@@ -793,4 +793,5 @@
     }
   </script>
 </body>
+
 </html>
